--- a/src/components/forms/input/Input.module.css
+++ b/src/components/forms/input/Input.module.css
@@ -18,6 +18,7 @@
     color: var(--w8);
     text-align: left;
     cursor: text;
+    width: 100%;
 }
 
 .input {
@@ -29,6 +30,7 @@
     color: var(--w9);
     font-size: inherit;
     cursor: text;
+    width: 100%;
 }
 
 .input:active {
