--- a/src/components/terms/Terms.module.css
+++ b/src/components/terms/Terms.module.css
@@ -8,13 +8,15 @@
     font-size: 32px;
     font-weight: 500;
     color: var(--w10);
-    margin-bottom: 36px;
+    margin-bottom: 32px;
 }
 
 .text p {
-    font-size: 24px;
     font-weight: 400;
     line-height: 36px;
     color: var(--w9);
-    margin-bottom: 24px;
+    margin-bottom: 20px;
+    max-width: 75ch;
+    font-size: 20px;
+    line-height: 1.5;
 }
