telas de usuário

--- a/src/components/forms/Forms.module.css
+++ b/src/components/forms/Forms.module.css
@@ -69,3 +69,11 @@
     font-weight: 500;
     color: var(--g11);
 }
+
+.flexInputs {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    max-width: 400px;
+}
