--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ html {
     --g7: #2D848A;
     --g8: #217076;
     --g9: #105458;
+    --g10: #073E42;
     --g11: #002325;
     --g12: #001213;
 
@@ -50,6 +51,10 @@ button {
 
 ul {
     list-style: none;
+}
+
+header {
+    margin-bottom: 44px;
 }
 
 .App {
