mudei arquivos para funcionarem com json server

--- a/src/components/addresses/addressCard/AddressCard.module.css
+++ b/src/components/addresses/addressCard/AddressCard.module.css
@@ -1,7 +1,9 @@
 .address {
     border: 1px solid var(--w4);
     border-radius: 4px;
-    padding: 16px;
+    padding: 20px 16px;
+    max-width: 480px;
+    margin: 0 auto;
 }
 
 .titulo {
