--- a/src/components/forms/Forms.module.css
+++ b/src/components/forms/Forms.module.css
@@ -77,3 +77,43 @@
     width: 100%;
     max-width: 400px;
 }
+
+@media (max-width: 540px) {
+    .formContainer {
+        min-width: 100%;
+    }
+
+    .formTitle {
+        padding: 12px 0;
+    }
+
+    .title {
+        font-size: 20px;
+    }
+
+    .formContent {
+        border-radius: 0 0 2px 2px;
+        padding: 16px 8px;
+    }
+
+    .instruction {
+        font-size: 14px;
+        margin-bottom: 16px;
+    }
+
+    .link {
+        font-size: 12px;
+    }
+
+    .redirect {
+        font-size: 12px;
+    }
+
+    .redirectUnderline {
+        font-size: 12px;
+    }
+
+    .inputs {
+        gap: 12px;
+    }
+}
