--- a/src/components/forms/checkbox/Checkbox.module.css
+++ b/src/components/forms/checkbox/Checkbox.module.css
@@ -15,6 +15,21 @@
 .label {
     text-align: left;
     font-size: 20px;
-    line-height: 30px;
+    line-height: 1.5;
     font-weight: 300;
+}
+
+@media (max-width: 540px) {
+    .checkContainer {
+        gap: 8px;
+    }
+
+    .check {
+        width: 16px;
+        height: 16px;
+    }
+
+    .label {
+        font-size: 12px;
+    }
 }
