--- a/src/components/footer/customer/FooterCustomer.module.css
+++ b/src/components/footer/customer/FooterCustomer.module.css
@@ -12,6 +12,13 @@
     gap: 40px;
 }
 
+.logo {
+    display: block;
+    width: 93px;
+    height: 37px;
+    background: url('../../../assets/logo/logo-w.svg');
+}
+
 .footer h3 {
     font-size: 20px;
     font-weight: 500;
@@ -29,6 +36,7 @@
     font-weight: 400;
     color: var(--w2);
     margin-bottom: 12px;
+    line-height: 1.3;
 }
 
 .footer a:hover {
@@ -39,4 +47,99 @@
     display: flex;
     align-items: center;
     gap: 48px;
+}
+
+@media (max-width: 1052px) {
+    .footer {
+        padding: 48px;
+    }
+    
+    .footerGrid {
+        gap: 28px;
+    }
+    
+    .footer h3 {
+        line-height: 1.3;
+        margin-bottom: 28px;
+    }
+
+    .footer ul {
+        margin-bottom: 32px;
+    }
+
+    .footer li {
+        margin-bottom: 8px;
+    }
+    
+    .listIcons {
+        gap: 28px;
+    }
+}
+
+@media (max-width: 840px) {
+    .footer {
+        height: 680px;
+        padding: 40px 0px;
+    }
+
+    .footerGrid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 540px) {
+    .footer {
+        height: 440px;
+        padding: 24px 8px;
+        margin-top: 44px;
+    }
+
+    .footerGrid {
+        gap: 24px;
+    }
+
+    .logo {
+        width: 70px;
+        height: 28px;
+        background: url('../../../assets/logo/logo-w-small.svg') no-repeat center center;
+    }
+
+    .footer h3 {
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+
+    .footer ul {
+        margin-bottom: 22px;
+    }
+
+    .footer li {
+        font-size: 12px;
+        margin-bottom: 6px;
+    }
+    
+    .listIcons {
+        gap: 20px;
+    }
+
+    .facebookIcon {
+        display: block;
+        width: 16px;
+        height: 16px;
+        background: url('../../../assets/social/facebook-small.svg');
+    }
+
+    .twitterIcon {
+        display: block;
+        width: 16px;
+        height: 16px;
+        background: url('../../../assets/social/twitter-small.svg');
+    }
+
+    .instagramIcon {
+        display: block;
+        width: 16px;
+        height: 16px;
+        background: url('../../../assets/social/instagram-small.svg');
+    }
 }
