--- a/src/components/products/gridProducts/GridProducts.module.css
+++ b/src/components/products/gridProducts/GridProducts.module.css
@@ -3,3 +3,21 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 40px;
 }
+
+@media (max-width: 1052px) {
+    .grid {
+        gap: 24px;
+    }
+}
+
+@media (max-width: 840px) {
+    .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 540px) {
+    .grid {
+        gap: 12px;
+    }
+}
