--- a/src/components/terms/Terms.module.css
+++ b/src/components/terms/Terms.module.css
@@ -20,3 +20,19 @@
     font-size: 20px;
     line-height: 1.5;
 }
+
+@media (max-width: 540px) {
+    .content {
+        gap: 16px;
+    }
+    
+    .text h2 {
+        font-size: 14px;
+        margin-bottom: 12px;
+    }
+
+    .text p {
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+}
