--- a/src/components/forms/Forms.module.css
+++ b/src/components/forms/Forms.module.css
@@ -113,7 +113,8 @@
         font-size: 12px;
     }
 
-    .inputs {
-        gap: 12px;
+    .inputs,
+    .flexInputs {
+        gap: 8px;
     }
 }
