--- a/src/components/userCard/UserCard.module.css
+++ b/src/components/userCard/UserCard.module.css
@@ -1,3 +1,24 @@
+.nameIcon {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url('../../assets/admin/badge.svg') no-repeat center center;
+}
+
+.idIcon {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url('../../assets/admin/fingerprint.svg') no-repeat center center;
+}
+
+.mailIcon {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url('../../assets/admin/mail.svg') no-repeat center center;
+}
+
 .info {
     display: grid;
     gap: 12px;
@@ -8,4 +29,33 @@
     display: flex;
     align-items: center;
     gap: 8px;
+}
+
+@media (max-width: 540px) {
+    .nameIcon {
+        width: 16px;
+        height: 16px;
+        background-image: url('../../assets/admin/badge-s.svg');
+    }
+
+    .mailIcon {
+        width: 16px;
+        height: 16px;
+        background-image: url('../../assets/admin/mail-s.svg');
+    }
+
+    .idIcon {
+        width: 16px;
+        height: 16px;
+        background-image: url('../../assets/admin/fingerprint-s.svg');
+    }    
+
+    .info {
+        font-size: 14px;
+        gap: 4px;
+    }
+
+    .infoItem {
+        gap: 8px;
+    }
 }
