--- a/src/components/faq/Faq.module.css
+++ b/src/components/faq/Faq.module.css
@@ -3,6 +3,12 @@
     gap: 32px;
 }
 
+@media (max-width: 840px) {
+    .questions {
+        gap: 20px;
+    }
+}
+
 @media (max-width: 540px) {
     .questions {
         gap: 12px;
