--- a/src/components/footer/admin/FooterAdmin.module.css
+++ b/src/components/footer/admin/FooterAdmin.module.css
@@ -6,3 +6,20 @@
     text-align: center;
     padding: 16px 0;
 }
+
+.logo {
+    display: block;
+    width: 70px;
+    height: 28px;
+    background: url('../../../assets/logo/logo-w-small.svg') no-repeat center center;
+}
+
+@media (max-width: 540px) {
+    .footer {
+        padding: 8px 0;
+    }
+
+    .logo {
+        background-image: url('../../../assets/logo/logo-w-small-s.svg');
+    }
+}
