--- a/src/components/header/admin/HeaderAdmin.module.css
+++ b/src/components/header/admin/HeaderAdmin.module.css
@@ -6,12 +6,19 @@
 .headerSupra {
     display: flex;
     justify-content: center;
-    padding: 24px 0;
+    padding: 20px 16px;
+}
+
+.logo {
+    display: block;
+    width: 93px;
+    height: 37px;
+    background: url('../../../assets/logo/logo.svg') no-repeat center center;
 }
 
 .headerInfra {
     background-color: var(--w10);
-    padding: 16px;
+    padding: 16px 0px;
 }
 
 .infraNav {
@@ -35,6 +42,13 @@
     gap: 4px;
 }
 
+.accountIcon {
+    display: block;
+    width: 28px;
+    height: 28px;
+    background: url('../../../assets/header/account_circle_white.svg') no-repeat center center;
+}
+
 .linkMenu,
 .account a {
     position: relative;
@@ -49,4 +63,68 @@
     background-color: var(--r5);
     border-radius: 1px;
     position: absolute;
+}
+
+
+@media (max-width: 840px) {  
+    .header {
+        background-color: var(--w10);
+        padding-right: 12px;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, .4);
+        margin-bottom: 32px;
+    }
+
+    .headerSupra {
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .menuIcon {
+        display: block;
+        width: 32px;
+        height: 32px;
+        background: url('../../../assets/header/menu-w.svg') no-repeat center center;
+    }
+
+    .logo {
+        background-image: url('../../../assets/logo/logo-w.svg');
+    }
+
+    .accountIcon {
+        width: 32px;
+        height: 32px;
+        background-image: url('../../../assets/header/account_circle_white_g.svg');
+    }
+}
+
+@media (max-width: 540px) {
+    .header {
+        padding-right: 0px;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, .4);
+        margin-bottom: 16px;
+    }
+
+    .headerSupra {
+        padding: 10px 8px;
+    }
+
+    .menuIcon {
+        width: 24px;
+        height: 24px;
+        background-image: url('../../../assets/header/menu-small-w.svg');
+    }
+
+    .logo {
+        width: 50px;
+        height: 20px;
+        background-image: url('../../../assets/logo/logo-w-small-s.svg');
+    }
+
+    .accountIcon {
+        width: 24px;
+        height: 24px;
+        background-image: url('../../../assets/header/account_circle_small_w.svg');
+    }
 }
