--- a/src/components/products/product/Product.module.css
+++ b/src/components/products/product/Product.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    height: 100%;
 }
 
 .imgPrincipal {
@@ -142,20 +143,21 @@
     flex-wrap: wrap;
 }
 
-@media (max-width: 540px) {
+@media (max-width: 840px) {
     .gridProduct {
         grid-template-columns: 1fr;
         gap: 12px;
         padding: 0px;
-        margin-bottom: 44px;
+        margin-bottom: 56px;
+    }
+
+    .imgPrincipal {
+        height: 560px;
     }
 
     .photos {
         display: block;
-    }
-
-    .imgPrincipal {
-        height: 320px;
+        margin-bottom: 16px;
     }
 
     .secundarias {
@@ -164,12 +166,60 @@
 
     .header {
         text-align: center;
+    }
+
+    .titulo {
+        margin-bottom: 0px;
+    }
+
+    .separator {
+        margin-bottom: 20px;
+    }
+
+    .valores {
+        text-align: center;
+        justify-content: stretch;
+        margin-bottom: 16px;
+    }
+
+    .parcelamento {
+        justify-content: center;
+    }
+
+    .cardIcon {
+        display: none;
+    }
+
+    .form {
+        border: 1px solid var(--w2);
+        border-radius: 4px;
+        padding: 12px 16px 0px 16px;
+        margin-bottom: 44px;
+    }
+
+    .btn {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 540px) {
+    .gridProduct {
+        gap: 12px;
+        padding: 0px;
+        margin-bottom: 44px;
+    }
+
+    .imgPrincipal {
+        height: 320px;
+    }
+
+    .header {
         margin-bottom: 12px;
     }
 
     .titulo {
         font-size: 24px;
-        margin-bottom: 0px;
     }
 
     .tipo {
@@ -190,21 +240,11 @@
         font-size: 16px;
     }
 
-    .parcelamento {
-        justify-content: center;
-    }
-
-    .cardIcon {
-        display: none;
-    }
-
     .parcelas {
         font-size: 14px;
     }
 
     .form {
-        border: 1px solid var(--w2);
-        border-radius: 4px;
         padding: 8px 8px 16px 8px;
         margin-bottom: 32px;
     }
