--- a/src/components/sectionTitle/search/TitleSearch.module.css
+++ b/src/components/sectionTitle/search/TitleSearch.module.css
@@ -6,8 +6,8 @@
     background-color: var(--w2);
     border: 1px solid var(--w4);
     border-radius: 4px;
-
     padding: 36px 32px;
+    margin-bottom: 40px;
 }
 
 .title {
@@ -49,3 +49,41 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+@media (max-width: 840px) {
+    .titleSearch {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 12px;
+        justify-content: stretch;
+        padding: 12px 16px;
+        margin-bottom: 32px;
+    }
+
+    .searchBarContainer {
+        max-width: none;
+    }
+}
+
+@media (max-width: 540px) {
+    .titleSearch {
+        padding: 12px;
+        margin-bottom: 16px;
+    }
+
+    .title {
+        font-size: 20px;
+        line-height: 1;
+        gap: 8px;
+    }
+
+    .searchBarContainer {
+        height: 32px;
+        border-radius: 4px;
+    }
+
+    .searchBar {
+        font-size: 12px;
+    }
+}
+
