--- a/src/components/cart/cartItem/CartItem.module.css
+++ b/src/components/cart/cartItem/CartItem.module.css
@@ -8,9 +8,16 @@
   display: block;
   width: 88px;
   height: 112px;
-  background-color: var(--w2);
+  background-color: #fff;
   border-radius: 4px;
-  border: none;
+  border: 1px solid var(--w2);
+}
+
+.image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .title {
@@ -40,10 +47,12 @@
 }
 
 .quantity {
-  display: block;
+  display: grid;
+  place-content: center;
   width: 28px;
   height: 28px;
   font-size: 16px;
+  line-height: 1;
   text-align: center;
   color: var(--w8);  
   border: 1px solid var(--w4);
