--- a/src/components/forms/quantity/Quantity.module.css
+++ b/src/components/forms/quantity/Quantity.module.css
@@ -14,12 +14,13 @@
     outline: none;
 }
 
-button.box:hover,
-button.box:focus {
+button.box:hover {
     background-color: var(--w2);
 }
 
 .input {
+    display: grid;
+    place-content: center;
     font-family: var(--fonte-texto);
     font-size: 16px;
     text-align: center;
