--- a/src/components/footer/admin/FooterAdmin.module.css
+++ b/src/components/footer/admin/FooterAdmin.module.css
@@ -1,26 +1,27 @@
 .footer {
-  margin-top: 120px;
-  background-color: var(--w10);
-  display: flex;
-  place-content: center;
-  text-align: center;
-  padding: 16px 0;
+	margin-top: 120px;
+	background-color: var(--w10);
+	display: flex;
+	place-content: center;
+	text-align: center;
+	padding: 16px 0;
 }
 
 .logo {
-  display: block;
-  width: 70px;
-  height: 28px;
-  background: url("../../../assets/logo/logo-w-small.svg") no-repeat center
-    center;
+	display: block;
+	width: 141px;
+	height: 27px;
+	background: url("../../../assets/logo/logo-m-w.svg") no-repeat center center;
 }
 
 @media (max-width: 540px) {
-  .footer {
-    padding: 8px 0;
-  }
+	.footer {
+		padding: 8px 0;
+	}
 
-  .logo {
-    background-image: url("../../../assets/logo/logo-w-small-s.svg");
-  }
+	.logo {
+		width: 94px;
+		height: 18px;
+		background-image: url("../../../assets/logo/logo-w-xs.svg");
+	}
 }
