--- a/src/pages/product/admin/ProductAdmin.module.css
+++ b/src/pages/product/admin/ProductAdmin.module.css
@@ -1,94 +1,124 @@
 .grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 36px;
-  margin-bottom: 80px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 36px;
+	margin-bottom: 80px;
 }
 
 .form {
-  border: 1px solid var(--w4);
-  border-top: none;
-  padding: 28px 32px 44px 32px;
+	border: 1px solid var(--w4);
+	border-top: none;
+	padding: 28px 32px 44px 32px;
 }
 
 .dataSection {
-  margin-bottom: 36px;
+	margin-bottom: 36px;
 }
 
 .sectionTitle {
-  font-size: 24px;
-  margin-bottom: 16px;
+	font-size: 24px;
+	margin-bottom: 16px;
 }
 
 .inputs {
-  display: grid;
-  gap: 12px;
-  margin-bottom: 16px;
+	display: grid;
+	gap: 12px;
+	margin-bottom: 16px;
 }
 
 .submitedImages {
-  margin-top: 16px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px;
+	margin-top: 16px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 12px;
 }
 
 .containerPreview {
-  display: block;
-  width: 88px;
-  height: 112px;
-  border: 1px solid var(--w2);
-  border-radius: 2px;
+	display: block;
+	width: 88px;
+	height: 112px;
+	border: 1px solid var(--w2);
+	border-radius: 2px;
 }
 
 .containerPreview img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 }
 
 .colorsList {
-  margin-top: 16px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
+	margin-top: 16px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 8px;
 }
 
 .containerButton button {
-  margin: 0 auto;
+	margin: 0 auto;
+}
+
+.remove {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	font-size: 20px;
+	font-weight: 500;
+	text-decoration: underline;
+	color: var(--r5);
+}
+
+.removeIcon {
+	display: block;
+	width: 32px;
+	height: 32px;
+	background: url("../../../assets/admin/person_remove.svg") no-repeat center
+		center;
 }
 
 @media (max-width: 840px) {
-  .grid {
-    grid-template-columns: 1fr;
-  }
+	.grid {
+		grid-template-columns: 1fr;
+	}
+
+	.remove {
+		font-size: 16px;
+	}
+
+	.removeIcon {
+		display: block;
+		width: 28px;
+		height: 28px;
+		background: url("../../assets/admin/person_remove_small.svg") no-repeat
+			center center;
+	}
 }
 
 @media (max-width: 540px) {
-  .form {
-    padding: 20px 12px 32px 12px;
-  }
+	.form {
+		padding: 20px 12px 32px 12px;
+	}
 
-  .dataSection {
-    display: grid;
-  }
+	.dataSection {
+		display: grid;
+	}
 
-  .sectionTitle {
-    font-size: 20px;
-    margin-bottom: 12px;
-  }
+	.sectionTitle {
+		font-size: 20px;
+		margin-bottom: 12px;
+	}
 
-  .inputs {
-    gap: 8px;
-  }
+	.inputs {
+		gap: 8px;
+	}
 
-  .submitedImages {
-    gap: 8px;
-  }
+	.submitedImages {
+		gap: 8px;
+	}
 
-  .containerPreview {
-    width: 64px;
-    height: 80px;
-  }
+	.containerPreview {
+		width: 64px;
+		height: 80px;
+	}
 }
