Correção de bug na exibição de imagens

--- a/src/components/imagesGrid/ImagesGrid.module.css
+++ b/src/components/imagesGrid/ImagesGrid.module.css
@@ -22,6 +22,10 @@
   object-fit: contain;
 }
 
+.imgPrincipal img {
+  max-height: 460px;
+}
+
 .imgsec {
   background-color: #fff;
   height: 112px;
